nenolod     2006/07/17 18:41:43 UTC	(20060717-5895)
  Log:
  - generic dictionary tree engine, will be used for the commandtree rewrite.
  

  Changes:	Modified:
  +1 -0		trunk/include/atheme.h (File Modified) 
  +68 -0	trunk/include/dictionary.h (File Added) 
  +1 -0		trunk/src/Makefile.in (File Modified) 
  +135 -0	trunk/src/dictionary.c (File Added) 


jilles      2006/07/17 17:05:33 UTC	(20060717-5893)
  Log:
  charybdis: use saslserv, not nickserv, as the sasl agent
  

  Changes:	Modified:
  +7 -1		trunk/protocol/charybdis.c (File Modified) 


jilles      2006/07/17 17:04:50 UTC	(20060717-5891)
  Log:
  Add channel_can_change_topic hook to allow modules to hook
  into topic changes to cancel/revert them.
  This is only done for topic changes coming from the IRC
  network, via a new function handle_topic_from()
  (which supplies the missing source of the topic message).
  

  Changes:	Modified:
  +11 -0	trunk/include/atheme.h (File Modified) 
  +2 -2		trunk/protocol/asuka.c (File Modified) 
  +2 -2		trunk/protocol/bahamut.c (File Modified) 
  +2 -2		trunk/protocol/bircd.c (File Modified) 
  +2 -2		trunk/protocol/charybdis.c (File Modified) 
  +1 -1		trunk/protocol/dreamforge.c (File Modified) 
  +2 -2		trunk/protocol/hybrid.c (File Modified) 
  +2 -2		trunk/protocol/hyperion.c (File Modified) 
  +2 -2		trunk/protocol/inspircd.c (File Modified) 
  +1 -1		trunk/protocol/ircnet.c (File Modified) 
  +2 -2		trunk/protocol/nefarious.c (File Modified) 
  +1 -1		trunk/protocol/plexus.c (File Modified) 
  +1 -1		trunk/protocol/ptlink.c (File Modified) 
  +2 -2		trunk/protocol/ratbox.c (File Modified) 
  +1 -1		trunk/protocol/shadowircd.c (File Modified) 
  +2 -2		trunk/protocol/solidircd.c (File Modified) 
  +1 -1		trunk/protocol/sorcery.c (File Modified) 
  +1 -1		trunk/protocol/ultimate3.c (File Modified) 
  +2 -2		trunk/protocol/undernet.c (File Modified) 
  +1 -1		trunk/protocol/unreal.c (File Modified) 
  +45 -0	trunk/src/ptasks.c (File Modified) 

